--- a/src/css/style.css
+++ b/src/css/style.css
@@ -128,7 +128,7 @@
     width: 370px;
   }
   #main-image {
-    content: url(/src/images/image-product-mobile.jpg);
+    content: url(./src/images/image-product-mobile.jpg);
     border-radius: 10px 10px 0px 0px;
   } 
   .post-description{
